--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup Deno
-        uses: denolib/setup-deno@master
-        with:
-          deno-version: 1.2
+        uses: denoland/setup-deno@v1
 
       - name: Format
         run: deno fmt --check
